# fxxkHilife

./: .gitignore  DEVELOPMENT_LOG.md  PROJECT_CORE.md  README.md  README_EN.md  VERSION_MANAGEMENT.md  debug.keystore  fix_timeline.py  settings.gradle.kts
.github/workflows/: android-build.yml  build.yml  release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/freebuds/controller/: FreeBudsApp.kt  HilifeApplication.kt  MainActivity.kt
app/src/main/java/com/freebuds/controller/bluetooth/: BatteryHandler.kt  BluetoothScanner.kt  CompanionDeviceHelper.kt  GattDriver.kt  HuaweiDeviceHandler.kt  ISppClient.kt  ITestSppClient.kt  OpenFreebudsHandlers.kt  SppClient.kt  SppCommand.kt  SppDriver.kt  SppPackage.kt
app/src/main/java/com/freebuds/controller/data/: DeviceRepository.kt  DeviceViewModel.kt  EarbudStateMapper.kt  PreferencesRepository.kt  UpdateChecker.kt
app/src/main/res/drawable/: ic_anc_awareness.xml  ic_anc_cancellation.xml  ic_anc_normal.xml  ic_earbuds_case.xml  ic_tile.xml  ic_tile_anc.xml
app/src/main/res/layout/: activity_main.xml  activity_terminal.xml
app/src/main/res/layout-land/: activity_terminal.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
docs/: ARCHITECTURE_TODO.md  I18N.md  index.html  robots.txt  sitemap.xml
gradle/: libs.versions.toml
native-daemon/: Cargo.toml
native-daemon/src/: bluetooth.rs  daemon.rs  ipc.rs  keepalive.rs  main.rs  notify.rs
scripts/: bump_version.py  update_version.sh
(+59 files in other folders)
