[package]
name = "fxxkhilife_daemon"
version = "0.1.0"
edition = "2021"
description = "Native daemon for fxxkHilife — aggressive keepalive, BT health monitor, watchdog, notification relay"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
ctrlc = "3.4"
futures = "0.3"
